2009-01-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-selector.c: (hildon_date_selector_get_date): Check
	that there's actually a month or year selected before obtaining them.
	* src/hildon-picker-dialog.c: (_restore_current_selection): Block emission
	of the HildonTouchSelector::changed signal, as it was emitted on every
	single item selection.

	Fix some warnings and possible crashers due to the selection restoring.

2009-01-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_clicked): Connect
	the signal handlers only after creating the dialog instead of on every
	button click.

2009-01-19  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_init)
	* src/hildon-check-button.c (hildon_check_button_init)
	* src/hildon-gtk.c (button_common_init): Don't let buttons get the
	focus when clicked by default.

	Fixes: NB#93431 (Main window not getting the focus once dialog is closed)

2009-01-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-button.c: (hildon_date_button_init): Remove an unneeded
	g_object_unref().

2009-01-16  Claudio Saavedra  <csaavedra@igalia.com>

	Based on a patch by Alejandro Pinheiro (apinheiro@igalia.com) and
	Alejandro G. Castro  (alex@igalia.com)

	* src/hildon-picker-dialog.c:
	(hildon_picker_dialog_class_init): install new "center-on-show"
	property.
	(hildon_picker_dialog_init): initialize center_on_show to TRUE.
	(hildon_picker_dialog_set_property): add setter code for the new
	property.
	(hildon_picker_dialog_get_property): add getter code for the new
	property.
	(hildon_picker_dialog_show): Ensure visibility of selected items in the
	HildonTouchSelector when "center-on-show" is TRUE, which is enabled by
	default.

	Fixes: NB#92849 (Selected item is not always visible when
	HildonTouchSelector is shown)

2009-01-16  Claudio Saavedra  <csaavedra@igalia.com>

	Based on a patch by Alejandro Pinheiro (apinheiro@igalia.com) and